@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2018-05-03 r74684) -- "Unsuffered Consequences"
+R Under development (unstable) (2018-03-29 r74484) -- "Unsuffered Consequences"
 Copyright (C) 2018 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -573,9 +573,88 @@ In options(max.print = Inf) : NAs introduced by coercion to integer range
 > ## not quite consistent in R <= 2.14.x
 > 
 > 
+> ## tagbuf is preserved after print dispatch in pairlists
+> obj <- structure(list(), class = "foo")
+> pairlist(a = list(A = obj, B = obj))
+$a
+$a$A
+list()
+attr(,"class")
+[1] "foo"
+
+$a$B
+list()
+attr(,"class")
+[1] "foo"
+
+
+> list(list(pairlist(obj), NULL))
+[[1]]
+[[1]][[1]]
+[[1]][[1]][[1]]
+list()
+attr(,"class")
+[1] "foo"
+
+
+[[1]][[2]]
+NULL
+
+
+> list(list(obj, pairlist(obj, structure(list(obj), attr = obj)), NULL))
+[[1]]
+[[1]][[1]]
+list()
+attr(,"class")
+[1] "foo"
+
+[[1]][[2]]
+[[1]][[2]][[1]]
+list()
+attr(,"class")
+[1] "foo"
+
+[[1]][[2]][[2]]
+[[1]][[2]][[2]][[1]]
+list()
+attr(,"class")
+[1] "foo"
+
+attr(,"attr")
+list()
+attr(,"class")
+[1] "foo"
+
+
+[[1]][[3]]
+NULL
+
+
+> rm(obj)
+> 
+> 
+> ## show() is preferred over print() when printing recursively
+> print.callS4Class <- function(x, ...) stop("shouldn't dispatch to print()")
+> .CallS4Class <- setClass("callS4Class", slots = c(x = "numeric"))
+> setMethod("show", "callS4Class", function(object) cat("S4 show!\n"))
+> x <- .CallS4Class(x = 1)
+> list(x)
+[[1]]
+S4 show!
+
+> pairlist(x)
+[[1]]
+S4 show!
+
+> structure(list(), attr = x)
+list()
+attr(,"attr")
+S4 show!
+> rm(x, .CallS4Class)
+> 
+> 
 > ## Calls with S3 class are not evaluated when (auto)-printed
 > obj <- structure(quote(stop("should not be evaluated")), class = "foo")
-> #--
 > a <- list(obj)
 > b <- pairlist(obj)
 > c <- structure(list(), attr = obj)
@@ -599,7 +678,7 @@ attr(,"attr")
 stop("should not be evaluated")
 attr(,"class")
 [1] "foo"
-> d # (not printed correctly, will be fixed later)
+> d
 [[1]]
 [[1]][[1]]
 stop("should not be evaluated")
@@ -612,8 +691,8 @@ stop("should not be evaluated")
 attr(,"class")
 [1] "foo"
 
-
-[[1]]
+[[1]][[2]][[2]]
+[[1]][[2]][[2]][[1]]
 stop("should not be evaluated")
 attr(,"class")
 [1] "foo"
@@ -624,7 +703,7 @@ attr(,"class")
 [1] "foo"
 
 
-
+[[1]][[3]]
 NULL
 
 
@@ -659,8 +738,8 @@ stop("should not be evaluated")
 attr(,"class")
 [1] "foo"
 
-
-[[1]]
+[[1]][[2]][[2]]
+[[1]][[2]][[2]][[1]]
 stop("should not be evaluated")
 attr(,"class")
 [1] "foo"
@@ -671,10 +750,78 @@ attr(,"class")
 [1] "foo"
 
 
-
+[[1]][[3]]
 NULL
 
 
-> ## all 4 x 2 = 8  cases produced an Error in R <= 3.5.0
-> 
+> # Now with a method defined
+> print.foo <- function(x, ...) cat("dispatched\n")
+> a
+[[1]]
+dispatched
+
+> b
+[[1]]
+dispatched
+
+> c
+list()
+attr(,"attr")
+dispatched
+> d
+[[1]]
+[[1]][[1]]
+dispatched
+
+[[1]][[2]]
+[[1]][[2]][[1]]
+dispatched
+
+[[1]][[2]][[2]]
+[[1]][[2]][[2]][[1]]
+dispatched
+
+attr(,"attr")
+dispatched
+
+
+[[1]][[3]]
+NULL
+
+
+> print(a)
+[[1]]
+dispatched
+
+> print(b)
+[[1]]
+dispatched
+
+> print(c)
+list()
+attr(,"attr")
+dispatched
+> print(d)
+[[1]]
+[[1]][[1]]
+dispatched
+
+[[1]][[2]]
+[[1]][[2]][[1]]
+dispatched
+
+[[1]][[2]][[2]]
+[[1]][[2]][[2]][[1]]
+dispatched
+
+attr(,"attr")
+dispatched
+
+
+[[1]][[3]]
+NULL
+
+
+> # Cleanup
+> rm(print.foo, obj, a, b, c, d)
 > 
